--- a/aspnet-core/src/Autoboxd.Domain.Shared/Localization/Autoboxd/en.json
+++ b/aspnet-core/src/Autoboxd.Domain.Shared/Localization/Autoboxd/en.json
@@ -4,18 +4,17 @@
     "Menu:Home": "Home",
     "Welcome": "Welcome",
     "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
-    "Menu:BookStore": "Book Store",
-    "Menu:Books": "Books",
+    "Menu:ItemStore": "Item Store",
+    "Menu:Items": "Items",
     "Actions": "Actions",
     "Close": "Close",
     "Delete": "Delete",
     "Edit": "Edit",
-    "PublishDate": "Publish date",
-    "NewBook": "New book",
+    "NewItem": "New item",
     "Name": "Name",
+    "CreationTime": "Creation Time",
     "Type": "Type",
     "Price": "Price",
-    "CreationTime": "Creation time",
     "AreYouSure": "Are you sure?",
     "AreYouSureToDelete": "Are you sure you want to delete this item?",
     "Enum:BookType:0": "Undefined",
