--- a/aspnet-core/src/Autoboxd.Domain.Shared/Localization/Autoboxd/en.json
+++ b/aspnet-core/src/Autoboxd.Domain.Shared/Localization/Autoboxd/en.json
@@ -18,6 +18,11 @@
     "AreYouSure": "Are you sure?",
     "AreYouSureToDelete": "Are you sure you want to delete this item?",
     "SuccessfullyDeleted": "Item has been successfully deleted",
+    "Permission:ItemStore": "Item Store",
+    "Permission:Items": "Item Management",
+    "Permission:Items.Create": "Creating new items",
+    "Permission:Items.Edit": "Editing the items",
+    "Permission:Items.Delete": "Deleting the items",
     "Enum:BookType:0": "Undefined",
     "Enum:BookType:1": "Adventure",
     "Enum:BookType:2": "Biography",
