--- a/aspnet-core/src/Autoboxd.Domain.Shared/Localization/Autoboxd/en.json
+++ b/aspnet-core/src/Autoboxd.Domain.Shared/Localization/Autoboxd/en.json
@@ -32,6 +32,7 @@
     "Enum:BookType:5": "Horror",
     "Enum:BookType:6": "Science",
     "Enum:BookType:7": "Science fiction",
-    "Enum:BookType:8": "Poetry"
+    "Enum:BookType:8": "Poetry",
+    "Exception:0001": "There is already an item with the same name: {name}"
   }
 }
