Bulk image uploads

--- a/aspnet-core/src/Autoboxd.Domain.Shared/Localization/Autoboxd/en.json
+++ b/aspnet-core/src/Autoboxd.Domain.Shared/Localization/Autoboxd/en.json
@@ -6,6 +6,9 @@
     "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
     "Menu:ItemStore": "Item Store",
     "Menu:Items": "Items",
+    "Menu:Cars": "Cars",
+    "Menu:Lists": "Lists",
+    "Menu:Articles": "Articles",
     "Actions": "Actions",
     "Close": "Close",
     "Delete": "Delete",
