--- a/aspnet-core/src/Autoboxd.Domain.Shared/Localization/Autoboxd/en.json
+++ b/aspnet-core/src/Autoboxd.Domain.Shared/Localization/Autoboxd/en.json
@@ -9,6 +9,7 @@
     "Menu:Cars": "Cars",
     "Menu:Lists": "Lists",
     "Menu:Articles": "Articles",
+    "Menu:Reviews": "Reviews", 
     "Actions": "Actions",
     "Close": "Close",
     "Delete": "Delete",
