--- a/aspnet-core/src/Autoboxd.Domain.Shared/Localization/Autoboxd/en.json
+++ b/aspnet-core/src/Autoboxd.Domain.Shared/Localization/Autoboxd/en.json
@@ -15,6 +15,7 @@
     "Delete": "Delete",
     "Edit": "Edit",
     "NewItem": "New item",
+    "NewList": "New list",
     "Name": "Name",
     "CreationTime": "Creation Time",
     "Type": "Type",
